[fix] Fix scrollbar issues

--- a/src/App.css
+++ b/src/App.css
@@ -38,25 +38,6 @@ html.using-mouse :focus {
   outline: none;
 }
 
-*::-webkit-scrollbar {
-  width: 12px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #acacac;
-  border-radius: 10px;
-  border: 3px solid transparent;
-  background-clip: padding-box;
-}
-
-html.dark *::-webkit-scrollbar-thumb {
-  background-color: #898f9a;
-}
-
 /* sonner toast always centered */
 [data-sonner-toaster] {
   width: 356px !important;
