--- a/src/styles.css
+++ b/src/styles.css
@@ -701,10 +701,6 @@ video {
   bottom: 1.25rem;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
 .end-2 {
   inset-inline-end: 0.5rem;
 }
@@ -753,16 +749,16 @@ video {
   left: 2.75rem;
 }
 
-.left-\[50vw\] {
-  left: 50vw;
-}
-
 .right-0 {
   right: 0px;
 }
 
 .right-3 {
   right: 0.75rem;
+}
+
+.right-6 {
+  right: 1.5rem;
 }
 
 .top-0 {
@@ -1076,8 +1072,8 @@ video {
   height: 3rem;
 }
 
-.h-16 {
-  height: 4rem;
+.h-14 {
+  height: 3.5rem;
 }
 
 .h-2 {
@@ -1233,10 +1229,6 @@ video {
   width: 1.25rem;
 }
 
-.w-56 {
-  width: 14rem;
-}
-
 .w-6 {
   width: 1.5rem;
 }
@@ -1337,10 +1329,6 @@ video {
 
 .max-w-\[65\%\] {
   max-width: 65%;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
 }
 
 .max-w-full {
@@ -2608,6 +2596,10 @@ video {
   fill: #dc2626;
 }
 
+.fill-white {
+  fill: #fff;
+}
+
 .fill-yellow-400 {
   fill: #facc15;
 }
@@ -2743,16 +2735,8 @@ video {
   padding-bottom: 1.15rem;
 }
 
-.pb-1\.5 {
-  padding-bottom: 0.375rem;
-}
-
 .pb-2\.5 {
   padding-bottom: 0.625rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
 }
 
 .pl-0 {
@@ -2817,10 +2801,6 @@ video {
 
 .pt-0 {
   padding-top: 0px;
-}
-
-.pt-1 {
-  padding-top: 0.25rem;
 }
 
 .pt-2 {
@@ -2907,6 +2887,10 @@ video {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.lowercase {
+  text-transform: lowercase;
 }
 
 .italic {
@@ -3583,25 +3567,6 @@ html.dark :focus {
 
 html.using-mouse :focus {
   outline: none;
-}
-
-*::-webkit-scrollbar {
-  width: 12px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #acacac;
-  border-radius: 10px;
-  border: 3px solid transparent;
-  background-clip: padding-box;
-}
-
-html.dark *::-webkit-scrollbar-thumb {
-  background-color: #898f9a;
 }
 
 /* sonner toast always centered */
@@ -4470,6 +4435,13 @@ html.dark *::-webkit-scrollbar-thumb {
   width: 1rem;
 }
 
+.group:hover .group-hover\:rotate-\[360deg\] {
+  --tw-rotate: 360deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+}
+
 .group:hover .group-hover\:bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
@@ -4539,13 +4511,9 @@ html.dark *::-webkit-scrollbar-thumb {
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
-.group:hover .group-hover\:px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.group:hover .group-hover\:pb-1\.5 {
-  padding-bottom: 0.375rem;
+.group:hover .group-hover\:px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
 }
 
 .group:hover .group-hover\:text-gray-900 {
@@ -6004,10 +5972,6 @@ html.dark *::-webkit-scrollbar-thumb {
     height: 1.75rem;
   }
 
-  .sm\:h-8 {
-    height: 2rem;
-  }
-
   .sm\:w-10 {
     width: 2.5rem;
   }
@@ -6022,10 +5986,6 @@ html.dark *::-webkit-scrollbar-thumb {
 
   .sm\:w-6 {
     width: 1.5rem;
-  }
-
-  .sm\:w-8 {
-    width: 2rem;
   }
 
   .sm\:w-auto {
@@ -6046,16 +6006,8 @@ html.dark *::-webkit-scrollbar-thumb {
     padding-bottom: 0.625rem;
   }
 
-  .sm\:pb-2 {
-    padding-bottom: 0.5rem;
-  }
-
   .sm\:pr-8 {
     padding-right: 2rem;
-  }
-
-  .sm\:pt-1\.5 {
-    padding-top: 0.375rem;
   }
 
   .sm\:text-center {
